@@ -1,5 +1,12 @@
 2006-01-18  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* lib/gaupol/base/text/parser.py:
+	* lib/gaupol/gtk/dialogs/filechooser.py:
+	* setup.py:
+	  Coding style fixes, NOTE and TODO rewordings.
+
+2006-01-18  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* lib/gaupol/gtk/delegates/fileopen.py:
 	  (FileOpenDelegate.open_main_files): Set config.file.directory to
 	  directory of file opened.
